--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="home">
         <div class="content">
-            <h2>Hi, I'm <span>Joe Greyson</span></h2>
+            <h2>Hi, I'm <span>Siddarth</span></h2>
             <h4>Frontend Developer</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A esse totam provident voluptas similique.
                 Impedit incidunt atque recusandae rem quam.</p>
