--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h2 class="logo"><span>J</span>oe.</h2>
+        <h2 class="logo"><span>J</span></h2>
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
@@ -28,8 +28,7 @@
         <div class="content">
             <h2>Hi, I'm <span>Siddarth</span></h2>
             <h4>Frontend Developer</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A esse totam provident voluptas similique.
-                Impedit incidunt atque recusandae rem quam.</p>
+            <p> Skilled Front-end Developer with 4 experience in designing, developing and maintaining front-end web applications.</p>
             <div class="btn-group">
                 <a href="#">Hire Me</a>
                 <a href="#">See Projects</a>
